# wasm2

./: .gitignore  Cargo.toml  README.md  STEREO_TODO.md  build.ps1  build_and_run.ps1  build_dev.ps1  build_dev.sh  build_release.ps1  build_release.sh  index.htm  index.html  index.js  metab.glsl  metaballs.frag  package.json  rustfmt.toml  webpack.config.js
.cargo/: config.toml
docs/: linting-and-formatting.md  wasm-best-practices.md
src/: app.rs  camera.rs  canvas3d.rs  chunk.rs  components.rs  cube.rs  cubes.rs  demo.rs  fast_rand.rs  framebuffer.rs  fullscreen_buffers.rs  gl_sys.rs  gl_web.rs  gl_win.rs  half_cube.rs  lib.rs  line_2d_strip.rs  particles.rs  plane.rs  projection.rs  quad.rs  scene.rs  scene1.rs  shaders.rs  static_geometry.rs  stereo_camera.rs  tunnel.frag  utils.rs  view.rs  xr.rs
src/ecs/: components.rs  entity.rs  mod.rs  resources.rs  systems.rs  world.rs
src/glsl/: cube_basic.frag  cube_basic.vert  depth_max_min.frag  line_2d_segment.vert  line_2d_strip.frag  line_2d_strip.vert  max_min.vert  max_min_max_min.frag  particles.frag  particles.vert  screen.frag
src/gpu/: context.rs  mod.rs  targets.rs  warehouse.rs
src/wgsl/: blur.wgsl  blur_upsample.wgsl  brightness.wgsl  chunk.wgsl  cube.wgsl  cube_gbuffer.wgsl  lens.wgsl  line_2d.wgsl  particles.wgsl  present.wgsl  screen_parity.wgsl  taa.wgsl  warehouse.wgsl  warehouse_gbuffer.wgsl
