[package]
name = "wasm2"
version = "0.0.0"
authors = ["Tiago <1585571+xernobyl@users.noreply.github.com>"]
edition = "2021"
description = "A program that runs and shows things on the screen."
repository = "https://github.com/xernobyl/wasm2"
license = "CC BY-NC-SA 4.0"
license-file = "http://creativecommons.org/licenses/by-nc-sa/4.0/"

#[build]
#target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "*"
js-sys = "*"
glam = "*"
serde = { version = "*", features = ["derive"] }
wasm-bindgen = { version = "*", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "*"
features = [
	'console',
	'CssStyleDeclaration',
	'Document',
	'Element',
	'FocusEvent',
	'HtmlCanvasElement',
	'HtmlElement',
	'Node',
	'Performance',
  'Screen',
	'UiEvent',
  'WebGl2RenderingContext',
	'WebGlBuffer',
	'WebGlFramebuffer',
	'WebGlProgram',
	'WebGlShader',
	'WebGlTexture',
	'WebGlUniformLocation',
  'WebGlVertexArrayObject',
	'Window',
]
